fix migrations and api-gateway
